--- a/pong/treuke/analise/analise.ipynb
+++ b/pong/treuke/analise/analise.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_players = df_players[[\"nome\",\"rank\",\"idade\",\"email\"]]\n",
+    "df_players = df_players[[\"nome\",\"mmr\",\"idade\",\"email\"]]\n",
     "df_matches_with_draw = df_matches.copy()\n",
     "df_matches = df_matches[df_matches[\"score1\"]!=df_matches[\"score2\"]].reset_index(drop = True)"
    ]
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -365,11 +365,11 @@
    ],
    "source": [
     "df_matches = df_matches_with_draw.copy()\n",
-    "df = pd.merge(df_matches, df_players.reset_index(), left_on=\"p1\", right_on=\"index\")[[\"p1\",\"p2\",\"score1\",\"score2\",\"tempo\",\"nome\",\"rank\"]]\n",
-    "df.rename(columns={\"nome\":\"p1_nome\",\"rank\":\"p1_rank\"}, inplace=True)\n",
-    "df = pd.merge(df, df_players.reset_index(), left_on=\"p2\", right_on=\"index\")[[\"p1\",\"p2\",\"score1\",\"score2\",\"tempo\",\"p1_nome\",\"p1_rank\",\"nome\",\"rank\"]]\n",
-    "df.rename(columns={\"nome\":\"p2_nome\",\"rank\":\"p2_rank\"}, inplace=True)\n",
-    "df[\"diferenca\"] = abs(df[\"p1_rank\"] - df[\"p2_rank\"])\n",
+    "df = pd.merge(df_matches, df_players.reset_index(), left_on=\"p1\", right_on=\"index\")[[\"p1\",\"p2\",\"score1\",\"score2\",\"tempo\",\"nome\",\"mmr\"]]\n",
+    "df.rename(columns={\"nome\":\"p1_nome\",\"mmr\":\"p1_mmr\"}, inplace=True)\n",
+    "df = pd.merge(df, df_players.reset_index(), left_on=\"p2\", right_on=\"index\")[[\"p1\",\"p2\",\"score1\",\"score2\",\"tempo\",\"p1_nome\",\"p1_mmr\",\"nome\",\"mmr\"]]\n",
+    "df.rename(columns={\"nome\":\"p2_nome\",\"mmr\":\"p2_mmr\"}, inplace=True)\n",
+    "df[\"diferenca\"] = abs(df[\"p1_mmr\"] - df[\"p2_mmr\"])\n",
     "\n",
     "# mpl.rcParams['axes.facecolor'] = \"#1f1f1f\"\n",
     "# mpl.rcParams['figure.facecolor'] = \"#1f1f1f\"\n",
